location page added, general style update

--- a/index.html
+++ b/index.html
@@ -2,12 +2,35 @@
 <html>
 
 <head>
-	<title>Flu Shot Central</title>
+	<title>Flu Shot Central - Home</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 	<link rel="stylesheet" href="assets/css/style.css">
 	<link href="https://fonts.googleapis.com/css?family=Lato:300,400,700&display=swap" rel="stylesheet">
 	<style>
+		#hero {
+			background: url(assets/img/How-International-Students-Make-Friends-in-College-1024x636.jpg);
+			background-size: cover;
+			background-position: bottom right;
+			height:400px;
+			width: 100%
+		}
+
+		.overlay {
+			background: rgba(0, 0, 0, 0.2);
+			height: 100%;
+			display: flex;
+			justify-content: center;
+			align-items: center;
+		}
+
+		.overlay div {
+			max-width: 600px;
+		}
+
+		.proof {
+			height: 70px;
+		}
 
 	</style>
 </head>
@@ -22,7 +45,7 @@
 		<nav id="mediasc500">
 			<ul>
 				<li>
-					<a href="index.html"><p class="titf">Home</p></a>
+					<a href="index.html" style="background: #dfe675"><p class="titf">Home</p></a>
 				</li>
 				<li>
 					<a href="prevention.html"><p class="titf">Prevention</p></a>
@@ -45,7 +68,47 @@
 		</div>
 	</header>
 
+<!--hero-->
+<div class="container" style="padding-top: 20px">
+	<div id="hero">
+		<div class="overlay">
+			<div class="p10 tc">
+				<p class="tcolor5">Get Your flu shot and live a healthy life</p>
+				<p class="tcolor5" style="font-size: 18px; margin-top: 0px">From Flu Shot Central</p>
+			</div>
+		</div>
+	</div>
+</div>
 
+<!--text-->
+<div class="container">
+	<div class="p50 hpaccc">
+		Are you a college student?<br>Did you get your flu shot this year? <br>Did you know that 37,000 people die each year in the US from the virus? 
+	</div>
+</div>
+
+<div class="container">
+	<div class="p50 hpaccc" style="padding-top: 0;">
+		While the elderly, young children and people with preexisting conditions are most at risk, you play an essential role in preventing unnecessary deaths by getting the flu shot yourself and preventing the spread of the disease to the most vulnerable! Only 50% of NYC college students get their flu shot. Let’s change this! Play your part - get the flu shot!
+	</div>
+</div>
+
+
+<!--bandaid-->
+<div class="container">
+	<div class="hpacccb tc" style="padding-top: 0;">
+		Get our band-aid from a partnered location and post an image of you wearing it. Show the world you got your antibodies!
+
+	</div>
+</div>
+<div class="container p50ho">
+	<div class="hpacccb tc boxing p10 m10w48">
+		Flu Shot Central Bandaid <br><img src="assets/img/ffcbandaid2.png" alt="" style="padding-top: 20px">
+	</div>
+	<div class="hpacccb tc boxing p10 m10w48">
+		I got my antibodies <br><img src="assets/img/1v2.png" alt="" style="padding-top: 20px"><br><img src="assets/img/4.png" alt="">
+	</div>
+</div>
 
 
 	<!--maybe copyrighted?-->
