--- a/index.html
+++ b/index.html
@@ -28,10 +28,6 @@
 			max-width: 600px;
 		}
 
-		.proof {
-			height: 70px;
-		}
-
 	</style>
 </head>
 
@@ -127,4 +123,6 @@
 			}
 		});
 	</script>
+	
+<!--By Leping Jiang-->
 </body></html>
