more consistency added

--- a/about.html
+++ b/about.html
@@ -54,7 +54,7 @@
 	<div class="site">
 		
 			<div class="h2-1">
-				<h1>About Flu</h1>
+				<h1 style="color: #fff">About Flu</h1>
 			
 				<h2>What is Influenza (Flu)?</h2>
 				<p>
