--- a/index.html
+++ b/index.html
@@ -98,11 +98,11 @@
 	</div>
 </div>
 <div class="container p50ho">
-	<div class="hpacccb tc boxing p10 m10w48">
-		Flu Shot Central Bandaid <br><img src="assets/img/ffcbandaid2.png" alt="" style="padding-top: 20px">
+	<div class="hpacccb tc boxing m10w48 ">
+		<div class="boxtitledg">Flu Shot Central Bandaid</div> <br><img src="assets/img/ffcbandaid2.png" alt="" style="padding: 10px 10px 5px 5px">
 	</div>
-	<div class="hpacccb tc boxing p10 m10w48">
-		I got my antibodies <br><img src="assets/img/1v2.png" alt="" style="padding-top: 20px"><br><img src="assets/img/4.png" alt="">
+	<div class="hpacccb tc boxingy m10w48">
+		<div class="boxtitledg" style="background: #dfe675; color: #008377">I Got My Antibodies</div> <br><img src="assets/img/1v2.png" alt="" style="padding:  10px 5px 10px 5px"><br><img src="assets/img/4.png" alt="" style="padding:  10px 5px 10px 5px">
 	</div>
 </div>
 
