--- a/infoprevent.html
+++ b/infoprevent.html
@@ -56,7 +56,7 @@
 	<div class="site">
 
 			<div class="h1">
-				<h1>How to prevent the flu?</h1>
+				<h1 style="color: #fff">How to prevent the flu?</h1>
 			</div> 
 
 			<div class="h2-1">
