--- a/location.html
+++ b/location.html
@@ -188,7 +188,7 @@
 	<!--map search bar-->
 	<div class="rcontainer ">
 		<div class="m10w48 placeholder boxing" data-placeholder="">
-			<div class="hpacccb" style="color: white; background: #004F46; padding: 10px">
+			<div class="hpacccb boxtitledg">
 				Location
 			</div>
 			<div class="lactex p10">
@@ -196,8 +196,8 @@
 			</div>
 			<input id="pac-input" class="controls text_id p10 sinput" type="text" value="Flu Shot " placeholder="Flu Shot+zip code" style="border-radius: 20px;margin-bottom: 10px">
 		</div>
-		<div class="m10w48 boxing p10">
-			<div class="hpacccb">
+		<div class="m10w48 boxing">
+			<div class="hpacccb  boxtitledg">
 				Partnered Location
 			</div>
 			<div class="lactex p10">
