--- a/prevention.html
+++ b/prevention.html
@@ -50,7 +50,7 @@
 
 	<div class="site">
 		<div class="about">
-			<h1>About Flu</h1>
+			<h1 style="color: #fff">About Flu</h1>
 			<h2>What is Influenza (Flu)?</h2>
 			<p>
 			<img class="imgset1" src="assets/img/flu1.jpeg">
@@ -64,7 +64,7 @@
 
 
 		<div class="facts">
-			<h1>Facts</h1>
+			<h1 style="color: #008377">Facts</h1>
 			<h2>How Many People Get Sick with Flu Last Year?</h2>
 			<p>CDC estimates that the burden of illness during the 2018–2019 season included an estimated 35.5 million people getting sick with influenza, 16.5 million people going to a health care provider for their illness, 490,600 hospitalizations, and 34,200 deaths from influenza. The number of influenza-associated illnesses that occurred last season was similar to the estimated number of influenza-associated illnesses during the 2012–2013 influenza season when an estimated 34 million people had symptomatic influenza illness.</p>
 			<img class="imgset" src="assets/img/flu2.png">
@@ -75,7 +75,7 @@
 
 
 		<div class="flu">
-			<h1>Flu Vaccination</h1>
+			<h1 style="color: #008377">Flu Vaccination</h1>
 			<h2>Why should people get vaccinated against the flu?</h2>
 			<p>Influenza is a potentially serious disease that can lead to hospitalization and sometimes even death. Every flu season is different, and influenza infection can affect people differently, but millions of people get flu every year, hundreds of thousands of people are hospitalized and thousands to tens of thousands of people die from flu-related causes every year. An annual seasonal flu vaccine is the best way to help protect against flu. Vaccination has been shown to have many benefits including reducing the risk of flu illnesses, hospitalizations and even the risk of flu-related death in children.</p>
 			<img class="imgset" src="assets/img/flu4.png">
@@ -86,7 +86,7 @@
 
 
 		<div class="prevent">
-			<h1>Prevents</h1>
+			<h1 style="color: #fff">Prevents</h1>
 			<h2>How to prevent the flu?</h2>
 			<p>CDC urges you to take the following actions to pretect yourself.</p>
 			<div class="prenvent-flu"><ul>
