about page added and footer added

--- a/aboutffc.html
+++ b/aboutffc.html
@@ -46,12 +46,37 @@
 	</header>
 
 
+<div class="container p10">
+	<div class="hpaccc">
+		This is a school project for MultiMedia Programming class(MMP460), and this a group project useing three different types of media try to solve a social issue. This website is trying convince college student to get their flu shot, since less than 50% of college student in New Yoek have flu shot.
+	</div>
+</div>
 
+
+<div class="container p10">
+	<div class="hpaccc">
+		New York has the largest student population in the US. We hope we can inform them and increase Flu vaccination rates. 
+	</div>
+</div>
+
+<div class="container p10">
+	<div class="w33">
+		<img src="assets/img/hompage.png" alt="">
+	</div>
+
+	<div class="w33">
+		<img src="assets/img/perpage.png" alt="">
+	</div>
+
+	<div class="w33">
+		<img src="assets/img/locpage.png" alt="">
+	</div>
+</div>
 
 	<!--maybe copyrighted?-->
 	<footer>
 	<div class="container tc p5">
-		<div class="c33"><a href="aboutffc.html" class="p10">About FluShotCentral.com</a></div>
+		<div class="c33"><a href="aboutffc.html" class="p10" style="background: #dfe675">About FluShotCentral.com</a></div>
 		<div class="c33"><a href="aboutteamwow.html" class="p10">About Team Wow</a></div>
 		<div class="c33"><a href="https://www.cdc.gov/flu/index.htm" class="p10">CDC</a></div>
 	</div>
