--- a/aboutteamwow.html
+++ b/aboutteamwow.html
@@ -8,6 +8,30 @@
 	<link rel="stylesheet" href="assets/css/style.css">
 	<link href="https://fonts.googleapis.com/css?family=Lato:300,400,700&display=swap" rel="stylesheet">
 	<style>
+		.abttwname{
+			padding: 20px 10px;
+		}
+		
+		.membername{
+			font-size: 24px;;
+			font-weight: bold;
+		}
+		
+		.memberwork{
+			font-size: 20px;
+		}
+		
+		.pllink{
+			color: #fff;
+			background: #9AD3CC;
+			padding: 5px 10px;
+			border-radius: 10px;
+			font-size: 18px;
+		}
+		
+		.plickcc{
+			padding-top: 10px;
+		}
 
 	</style>
 </head>
@@ -45,14 +69,70 @@
 		</div>
 	</header>
 
+<div class="container">
+	<div class="abttwname">
+		<div class="membername">
+			Camika Wang
+		</div><br>
+		<div class="memberwork">
+			Website Design: Wireframe, Mockup 
+			<br>Writing 
+			<br>Image Editing
+		</div>
+		<div class="plickcc">
+			<a href="https://crazyxwang89.wixsite.com/mysite-cxw" class="pllink">Camika Wang's Portfolio</a>
+		</div>
 
+	</div>
+</div>
+
+<div class="container">
+	<div class="abttwname">
+		<div class="membername">
+			Qiantian Zhou
+		</div><br>
+		<div class="memberwork">
+			Website Coding: Prevention page, Pervention subpage
+			<br>Writing 
+			<br>Image Editing, color
+		</div>
+		<div class="plickcc">
+			<a href="https://qtianzhou.wixsite.com/mysite/graphic-design" class="pllink">Qiantian Zhou's Portfolio</a>
+		</div>
+	</div>
+</div>
+
+<div class="container">
+	<div class="abttwname">
+		<div class="membername">
+			Leping Jiang
+		</div><br>
+		<div class="memberwork">
+			Website Coding: Home, Location, Merge Page, Header, this page
+			<br>Writing 
+			<br>Social, Color Guide, Band-aid
+		</div>
+		<div class="plickcc">
+			<a href="https://lepingjiang.github.io/leping_jiang_mmp240final/work.html" class="pllink">Leping Jiang's Portfolio</a>
+		</div>
+
+	</div>
+</div>
+
+<div class="container">
+	
+</div>
+
+<div class="container">
+	
+</div>
 
 
 	<!--maybe copyrighted?-->
 	<footer>
 	<div class="container tc p5">
 		<div class="c33"><a href="aboutffc.html" class="p10">About FluShotCentral.com</a></div>
-		<div class="c33"><a href="aboutteamwow.html" class="p10">About Team Wow</a></div>
+		<div class="c33"><a href="aboutteamwow.html" class="p10" style="background: #dfe675">About Team Wow</a></div>
 		<div class="c33"><a href="https://www.cdc.gov/flu/index.htm" class="p10">CDC</a></div>
 	</div>
 		<p class="tc a1 p5">&copy; 2020 Flu Shot Central by Team Wow.</p>
