--- a/location.html
+++ b/location.html
@@ -220,7 +220,12 @@
 
 
 	<!--maybe copyrighted?-->
-	<footer style="padding-top: 10px;">
+	<footer>
+	<div class="container tc p5">
+		<div class="c33"><a href="aboutffc.html" class="p10">About FluShotCentral.com</a></div>
+		<div class="c33"><a href="aboutteamwow.html" class="p10">About Team Wow</a></div>
+		<div class="c33"><a href="https://www.cdc.gov/flu/index.htm" class="p10">CDC</a></div>
+	</div>
 		<p class="tc a1 p5">&copy; 2020 Flu Shot Central by Team Wow.</p>
 	</footer>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
