link to code added

--- a/aboutffc.html
+++ b/aboutffc.html
@@ -8,7 +8,13 @@
 	<link rel="stylesheet" href="assets/css/style.css">
 	<link href="https://fonts.googleapis.com/css?family=Lato:300,400,700&display=swap" rel="stylesheet">
 	<style>
-
+		.pllink{
+			color: #fff;
+			background: #9AD3CC;
+			padding: 5px 10px;
+			border-radius: 10px;
+			font-size: 18px;
+		}
 	</style>
 </head>
 
@@ -57,6 +63,12 @@
 	<div class="hpaccc">
 		New York has the largest student population in the US. We hope we can inform them and increase Flu vaccination rates. 
 	</div>
+</div>
+	
+<div class="container p10">
+<div>
+	<a href="https://github.com/lepingjiang/flu-shot-central-" class="pllink">View Code on GitGub</a>
+</div>
 </div>
 
 <div class="container p10">
