--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 	</header>
 
 <!--hero-->
-<div class="container" style="padding-top: 20px">
+<div class="fullcontainer" style="padding-top: 0px">
 	<div id="hero">
 		<div class="overlay">
 			<div class="p10 tc">
