--- a/location.html
+++ b/location.html
@@ -159,8 +159,8 @@
 
 
 <!--text-->
-	<div class="container">
-		<div class="hpacccb tc p50" style=" width: 100%; padding-bottom: 20px">
+	<div class="fullcontainer">
+		<div class="hpacccb tc p50" style=" width: 100%; padding-bottom: 0px">
 			Where can I get a flu vaccine?
 		</div>
 	</div>
