--- a/location.html
+++ b/location.html
@@ -147,7 +147,7 @@
 	</header>
 
 	<!--hero-->
-	<div class="container" style="padding-top: 20px">
+	<div class="fullcontainer" style="padding-top: 0px">
 		<div id="hero">
 			<div class="overlay">
 				<div class="p10 tc">
@@ -159,8 +159,8 @@
 
 
 <!--text-->
-	<div class="fullcontainer">
-		<div class="hpacccb tc p50" style=" width: 100%; padding-bottom: 0px">
+	<div class="container">
+		<div class="hpacccb tc p50" style=" width: 100%; padding-bottom: 20px">
 			Where can I get a flu vaccine?
 		</div>
 	</div>
