--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 		#hero {
 			background: url(assets/img/How-International-Students-Make-Friends-in-College-1024x636.jpg);
 			background-size: cover;
-			background-position: top center;
+			background-position: center center;
 			height:400px;
 			width: 100%
 		}
