map update and more consistency added

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 		#hero {
 			background: url(assets/img/How-International-Students-Make-Friends-in-College-1024x636.jpg);
 			background-size: cover;
-			background-position: center center;
+			background-position: bottom right;
 			height:400px;
 			width: 100%
 		}
@@ -98,20 +98,13 @@
 	</div>
 </div>
 <div class="container p50ho">
-	<div class="hpacccb tc boxing m10w48 ">
+	<div class="hpacccb tc boxing c50 m10">
 		<div class="boxtitledg">Flu Shot Central Bandaid</div> <br><img src="assets/img/ffcbandaid2.png" alt="" style="padding: 10px 10px 5px 5px">
 	</div>
-	<div class="hpacccb tc boxingy m10w48">
+	<div class="hpacccb tc boxingy c50 m10">
 		<div class="boxtitledg" style="background: #dfe675; color: #008377">I Got My Antibodies</div> <br><img src="assets/img/1v2.png" alt="" style="padding:  10px 5px 10px 5px"><br><img src="assets/img/4.png" alt="" style="padding:  10px 5px 10px 5px">
 	</div>
 </div>
-
-
-
-
-
-
-
 
 	<!--maybe copyrighted?-->
 	<footer>
