--- a/about.html
+++ b/about.html
@@ -56,23 +56,23 @@
 			<div class="h2-1">
 				<h1 style="color: #fff">About Flu</h1>
 			
-				<h2>What is Influenza (Flu)?</h2>
-				<p>
+				<h2 class="hpacccb">What is Influenza (Flu)?</h2>
+				<p class="hpaccc">
 				<img class="imgset1" src="assets/img/flu1.jpeg">
 				Flu is a contagious respiratory illness caused by influenza viruses that infect the nose, throat, and sometimes the lungs. It can cause mild to severe illness, and at times can lead to death. The best way to prevent flu is by getting a flu vaccine each year.</p>
 			</div>
 			
 			<div class="h2-2">
-				<h2>When is the flu season in the United States? </h2>
-				<p>season occurs in the Fall and Winter. While influenza viruses circulate year-round, most of the time flu activity peaks between December and February, but activity can last as late as May. </p>
-				<p>The overall health impact (e.g., infections, hospitalizations, and deaths) of a flu season varies from season to season. CDC collects, compiles, and analyzes information on influenza activity year-round in the United States and produces FluView, a weekly surveillance report, and FluView Interactive, which allows for more in-depth exploration of influenza surveillance data.  The Weekly U.S. Influenza Summary Update is updated each week from October through May.</p>
+				<h2 class="hpacccb">When is the flu season in the United States? </h2>
+				<p class="hpaccc">season occurs in the Fall and Winter. While influenza viruses circulate year-round, most of the time flu activity peaks between December and February, but activity can last as late as May. </p>
+				<p class="hpaccc">The overall health impact (e.g., infections, hospitalizations, and deaths) of a flu season varies from season to season. CDC collects, compiles, and analyzes information on influenza activity year-round in the United States and produces FluView, a weekly surveillance report, and FluView Interactive, which allows for more in-depth exploration of influenza surveillance data.  The Weekly U.S. Influenza Summary Update is updated each week from October through May.</p>
 			</div>
 
 			<div class="h2-3">
-				<h2>Understanding Influenza Viruses</h2>
-				<p>
+				<h2 class="hpacccb">Understanding Influenza Viruses</h2>
+				<p class="hpaccc">
 				<img class="imgset" src="assets/img/flu5.png">There are two main types of influenza(flu) virus: Types A and B. The influenza A and B viruses that routinely spread in people (human influenza viruses) are responsible for seasonal flu epidemics each year. </p>
-				<p>Influenza A viruses can be broken down into sub-types depending on the genes that make up the surface proteins. Over the course of a flu season, different types (A & B) and subtypes (influenza A) of influenza circulate and cause illness.</p>
+				<p class="hpaccc">Influenza A viruses can be broken down into sub-types depending on the genes that make up the surface proteins. Over the course of a flu season, different types (A & B) and subtypes (influenza A) of influenza circulate and cause illness.</p>
 			</div>
 </div>
 </div>
