--- a/flu.html
+++ b/flu.html
@@ -56,22 +56,22 @@
 			<div class="h2-1">
 				<h1>Flu Vaccination</h1>
 			
-				<h2>Why should people get vaccinated against the flu?</h2>
-				<p>Influenza is a potentially serious disease that can lead to hospitalization and sometimes even death. Every flu season is different, and influenza infection can affect people differently, but millions of people get flu every year, hundreds of thousands of people are hospitalized and thousands to tens of thousands of people die from flu-related causes every year. An annual seasonal flu vaccine is the best way to help protect against flu. Vaccination has been shown to have many benefits including reducing the risk of flu illnesses, hospitalizations and even the risk of flu-related death in children.</p>
+				<h2 class="hpacccb">Why should people get vaccinated against the flu?</h2>
+				<p class="hpaccc">Influenza is a potentially serious disease that can lead to hospitalization and sometimes even death. Every flu season is different, and influenza infection can affect people differently, but millions of people get flu every year, hundreds of thousands of people are hospitalized and thousands to tens of thousands of people die from flu-related causes every year. An annual seasonal flu vaccine is the best way to help protect against flu. Vaccination has been shown to have many benefits including reducing the risk of flu illnesses, hospitalizations and even the risk of flu-related death in children.</p>
 			</div>
 			
 			
 			<div class="h2-2">
-				<h2>How do flu vaccines work?</h2>
-				<p>Flu vaccines cause antibodies to develop in the body about two weeks after vaccination. These antibodies provide protection against infection with the viruses that are used to make the vaccine.</p>
+				<h2 class="hpacccb">How do flu vaccines work?</h2>
+				<p class="hpaccc">Flu vaccines cause antibodies to develop in the body about two weeks after vaccination. These antibodies provide protection against infection with the viruses that are used to make the vaccine.</p>
 				<img class="imgset1" src="assets/img/flu4.png">
-				<p>The seasonal flu vaccine protects against the influenza viruses that research indicates will be most common during the upcoming season. Most flu vaccines in the United States protect against four different flu viruses (“quadrivalent”); an influenza A (H1N1) virus, an influenza A (H3N2) virus, and two influenza B viruses. There are also some flu vaccines that protect against three different flu viruses (“trivalent”); an influenza A (H1N1) virus, an influenza A (H3N2) virus, and one influenza B virus. Two of the trivalent vaccines are designed specifically for people 65 and older to create a stronger immune response.</p>
+				<p class="hpaccc">The seasonal flu vaccine protects against the influenza viruses that research indicates will be most common during the upcoming season. Most flu vaccines in the United States protect against four different flu viruses (“quadrivalent”); an influenza A (H1N1) virus, an influenza A (H3N2) virus, and two influenza B viruses. There are also some flu vaccines that protect against three different flu viruses (“trivalent”); an influenza A (H1N1) virus, an influenza A (H3N2) virus, and one influenza B virus. Two of the trivalent vaccines are designed specifically for people 65 and older to create a stronger immune response.</p>
 			</div>
 			
 			<div class="h2-3">
-				<h2>When should I get vaccinated?</h2>
-				<p>You should get a flu vaccine before flu viruses begin spreading in your community since it takes about two weeks after vaccination for antibodies to develop in the body and provide protection against flu. Make plans to get vaccinated early in fall, before flu season begins. CDC recommends that people get a flu vaccine by the end of October. Getting vaccinated later, however, can still be beneficial and vaccination should continue to be offered throughout the flu season, even into January or later.</p>
-				<p>Getting vaccinated early (for example, in July or August) is likely to be associated with reduced protection against flu infection later in the flu season, particularly among older adults.</p>
+				<h2 class="hpacccb">When should I get vaccinated?</h2>
+				<p class="hpaccc">You should get a flu vaccine before flu viruses begin spreading in your community since it takes about two weeks after vaccination for antibodies to develop in the body and provide protection against flu. Make plans to get vaccinated early in fall, before flu season begins. CDC recommends that people get a flu vaccine by the end of October. Getting vaccinated later, however, can still be beneficial and vaccination should continue to be offered throughout the flu season, even into January or later.</p>
+				<p class="hpaccc">Getting vaccinated early (for example, in July or August) is likely to be associated with reduced protection against flu infection later in the flu season, particularly among older adults.</p>
 
 			</div>
 		</div>
