--- a/infoprevent.html
+++ b/infoprevent.html
@@ -60,75 +60,53 @@
 			</div> 
 
 			<div class="h2-1">
-				
-			
-				<h3>1.Get the flu shot</h3>
-				<p>As the flu virus mutates every year, it is a good idea to get the flu shot and build immunity for the latest flu virus. The shot doesn't only help from getting the flu, it also helps people around you.</p>
+				<h3 class="hpacccb">1.Get the flu shot</h3>
+				<p class="hpaccc">As the flu virus mutates every year, it is a good idea to get the flu shot and build immunity for the latest flu virus. The shot doesn't only help from getting the flu, it also helps people around you.</p>
 			</div>
 			
 			
 			<div class="h2-2">
-				<h3>2.Wash your hand</h3>
+				<h3 class="hpacccb">2.Wash your hand</h3>
 				
-				<p>Washing your hand is one of the most important preventative measures during the flu season since viruses can easily transfer from anything you touch to your hand. Make sure you wash your hand with soap, scrubbing and rubbing for at least 20 seconds, rinse and dry with a clean towel.</p>
+				<p class="hpaccc">Washing your hand is one of the most important preventative measures during the flu season since viruses can easily transfer from anything you touch to your hand. Make sure you wash your hand with soap, scrubbing and rubbing for at least 20 seconds, rinse and dry with a clean towel.</p>
 			</div>
 			
 			<div class="h2-3">
-				<h3>3.Cover your mouth when sneezing</h3>
-				<p>It is important to cover your mouth when sneezing, so you don’t transfer any viruses to people around you. It is a good idea to cover your mouth with a tissue when sneezing and put your used tissue in a trash can. If you don’t have tissue you still shouldn’t use your hand, you can use the upper sleeve to cover your mouth, so you don’t transfer viruses to your hand.</p>
+				<h3 class="hpacccb">3.Cover your mouth when sneezing</h3>
+				<p class="hpaccc">It is important to cover your mouth when sneezing, so you don’t transfer any viruses to people around you. It is a good idea to cover your mouth with a tissue when sneezing and put your used tissue in a trash can. If you don’t have tissue you still shouldn’t use your hand, you can use the upper sleeve to cover your mouth, so you don’t transfer viruses to your hand.</p>
 			</div>
 
 			<div class="h2-4">
-				<h3>4.Keep items you touch frequently clean</h3>
-				<p>Phones, headphones, keyboards, mouse, light switches, computers, and tablets are likely to have germ buildup over time, a wipe with alcohol to reduce viruses and bacteria, reduce the chance of getting sick.</p>
+				<h3 class="hpacccb">4.Keep items you touch frequently clean</h3>
+				<p class="hpaccc">Phones, headphones, keyboards, mouse, light switches, computers, and tablets are likely to have germ buildup over time, a wipe with alcohol to reduce viruses and bacteria, reduce the chance of getting sick.</p>
 			</div>
 
 			<div class="h2-5">
-				<h3>5.Get Vitamin D</h3>
-				<p>A study from 2006 by Cambridge University shows low levels of vitamin D will have some impact on the immune system and cause higher chances of getting the flu. If you don’t have enough vitamin D it will be a great idea to get some vitamin D supplement, to straighten your immune system.</p>
+				<h3 class="hpacccb">5.Get Vitamin D</h3>
+				<p class="hpaccc">A study from 2006 by Cambridge University shows low levels of vitamin D will have some impact on the immune system and cause higher chances of getting the flu. If you don’t have enough vitamin D it will be a great idea to get some vitamin D supplement, to straighten your immune system.</p>
 			</div>
 
 			<div class="h2-6">
-				<h3>6.Don’t touch your face</h3>
-				<p>you hand may have viruses from everything you have touched and touching your face will transfer any viruses on your hand to your face and through your eyes and mouth into your body and make you sick, so it a good idea not to touch your face unless you wash your hand after you touch your phone keyboard and anything that may have germ buildup.</p>
+				<h3 class="hpacccb">6.Don’t touch your face</h3>
+				<p class="hpaccc">you hand may have viruses from everything you have touched and touching your face will transfer any viruses on your hand to your face and through your eyes and mouth into your body and make you sick, so it a good idea not to touch your face unless you wash your hand after you touch your phone keyboard and anything that may have germ buildup.</p>
 			</div>
 
 			<div class="h2-7">
-				<h3>7.Get some exercise</h3>
-				<p>exercise can straighten your body and immune system, keep you healthy. Not enough exercise will weaken the immune system and after an intense workout, your body will be more likely to get sick.</p>
+				<h3 class="hpacccb">7.Get some exercise</h3>
+				<p class="hpaccc">exercise can straighten your body and immune system, keep you healthy. Not enough exercise will weaken the immune system and after an intense workout, your body will be more likely to get sick.</p>
 			</div>
 
 			<div class="h2-8">
-				<h3>8.Stay home when you’re sick</h3>
-				<p>If you are sick it is a good idea to stay at home instead of going to school or work, you might make others around you sick and cause more people sick. And if you need to go outside it's better to wear a face mask and gloves so it is less likely to transfer viruses to others.</p>
+				<h3 class="hpacccb">8.Stay home when you’re sick</h3>
+				<p class="hpaccc">If you are sick it is a good idea to stay at home instead of going to school or work, you might make others around you sick and cause more people sick. And if you need to go outside it's better to wear a face mask and gloves so it is less likely to transfer viruses to others.</p>
 			</div>
 
 			<div class="h2-9">
-				<h3>9.Get enough sleep</h3>
-				<p>Your immune system will be affected by how much you sleep. It is a good idea to get 7 to 9 hours of sleep and this will keep your immune function properly and prevent you from getting sick. And if you need to go outside it's better to wear a face mask and glove so it is less likely to transfer viruses to others.</p>
+				<h3 class="hpacccb">9.Get enough sleep</h3>
+				<p class="hpaccc">Your immune system will be affected by how much you sleep. It is a good idea to get 7 to 9 hours of sleep and this will keep your immune function properly and prevent you from getting sick. And if you need to go outside it's better to wear a face mask and glove so it is less likely to transfer viruses to others.</p>
 			</div>
-
-		
-
-
-			
 		</div>
-
-
-
 </div>
-
-
-
-
-
-
-
-
-
-
-
-
 
 
 
