--- a/location.html
+++ b/location.html
@@ -49,14 +49,6 @@
 			height: 500px
 		}
 
-		h1 {
-			font-size: 22px;
-			margin: 0;
-			font-weight: 400;
-			line-height: 20px;
-			padding: 20px 2px;
-		}
-
 		a {
 			color: #004F46;
 			text-decoration: none;
@@ -294,7 +286,7 @@
 	</div>
 	<div class="rcontainer">
 	<div class="c50 m10 boxing">
-	<div class="hpacccb boxtitledg" style="padding: 20px 10px">
+	<div class="hpacccb boxtitledg" style="padding: 12px 10px">
 				Location
 			</div>
 			<div class="lactex p10">
@@ -389,7 +381,7 @@
 					"properties": {
 						"phoneFormatted": "(718) 499-3414",
 						"phone": "7184993414",
-						"address": "341 9th St",
+						"address": "CVS pharmacy - 341 9th St",
 						"city": "Brooklyn",
 						"country": "United States",
 						"postalCode": "11215",
@@ -401,19 +393,18 @@
 					"geometry": {
 						"type": "Point",
 						"coordinates": [
-							-77.049766,
-							38.900772
+							-73.991353,
+							40.695821
 						]
 					},
 					"properties": {
-						"phoneFormatted": "(202) 507-8357",
-						"phone": "2025078357",
-						"address": "2221 I St NW",
-						"city": "Washington DC",
+						"phoneFormatted": "(516) 626-2004",
+						"phone": "5166262004",
+						"address": "Passport Health Brooklyn Travel Clinic - One Pierrepont Plaza, 300 Cadman Plaza W",
+						"city": "Brooklyn",
 						"country": "United States",
-						"crossStreet": "at 22nd St NW",
-						"postalCode": "20037",
-						"state": "D.C."
+						"postalCode": "11201",
+						"state": "NY"
 					}
 				},
 				{
@@ -421,19 +412,18 @@
 					"geometry": {
 						"type": "Point",
 						"coordinates": [
-							-77.043929,
-							38.910525
+							-73.986507,
+							40.753282
 						]
 					},
 					"properties": {
-						"phoneFormatted": "(202) 387-9338",
-						"phone": "2023879338",
-						"address": "1512 Connecticut Ave NW",
-						"city": "Washington DC",
+						"phoneFormatted": "(212) 403-2823",
+						"phone": "2124032823",
+						"address": "Passport Health NYC - 1001 6th Ave",
+						"city": "New York",
 						"country": "United States",
-						"crossStreet": "at Dupont Circle",
-						"postalCode": "20036",
-						"state": "D.C."
+						"postalCode": "10018",
+						"state": "NY"
 					}
 				},
 				{
@@ -441,19 +431,18 @@
 					"geometry": {
 						"type": "Point",
 						"coordinates": [
-							-77.0672,
-							38.90516896
+							-73.992872,
+							40.731162
 						]
 					},
 					"properties": {
-						"phoneFormatted": "(202) 337-9338",
-						"phone": "2023379338",
-						"address": "3333 M St NW",
-						"city": "Washington DC",
+						"phoneFormatted": "(212) 443-1000",
+						"phone": "2124431000",
+						"address": "Student Health Center New York University - 726 Broadway",
+						"city": "New York",
 						"country": "United States",
-						"crossStreet": "at 34th St NW",
-						"postalCode": "20007",
-						"state": "D.C."
+						"postalCode": "10003",
+						"state": "NY"
 					}
 				},
 				{
@@ -461,19 +450,18 @@
 					"geometry": {
 						"type": "Point",
 						"coordinates": [
-							-77.002583742142,
-							38.887041080933
+							-73.993898,
+							40.725997
 						]
 					},
 					"properties": {
-						"phoneFormatted": "(202) 547-9338",
-						"phone": "2025479338",
-						"address": "221 Pennsylvania Ave SE",
-						"city": "Washington DC",
+						"phoneFormatted": "(212) 226-6111",
+						"phone": "2122266111",
+						"address": "CVS - 298 Mulberry St",
+						"city": "New York",
 						"country": "United States",
-						"crossStreet": "btwn 2nd & 3rd Sts. SE",
-						"postalCode": "20003",
-						"state": "D.C."
+						"postalCode": "10012",
+						"state": "NY"
 					}
 				},
 				{
@@ -481,16 +469,18 @@
 					"geometry": {
 						"type": "Point",
 						"coordinates": [
-							-76.933492720127,
-							38.99225245786
+							-73.993928,
+							40.696863
 						]
 					},
 					"properties": {
-						"address": "8204 Baltimore Ave",
-						"city": "College Park",
+						"phoneFormatted": "(718) 237-5001",
+						"phone": "7182375001",
+						"address": "MinuteClinic - 156 Henry St",
+						"city": "Brooklyn",
 						"country": "United States",
-						"postalCode": "20740",
-						"state": "MD"
+						"postalCode": "11201",
+						"state": "NY"
 					}
 				},
 				{
@@ -498,19 +488,18 @@
 					"geometry": {
 						"type": "Point",
 						"coordinates": [
-							-77.097083330154,
-							38.980979
+							-73.944412,
+							40.618819
 						]
 					},
 					"properties": {
-						"phoneFormatted": "(301) 654-7336",
-						"phone": "3016547336",
-						"address": "4831 Bethesda Ave",
-						"cc": "US",
-						"city": "Bethesda",
+						"phoneFormatted": "(718) 677-3871",
+						"phone": "7186773871",
+						"address": "MinuteClinic - 2925 Kings Hwy",
+						"city": "Brooklyn",
 						"country": "United States",
-						"postalCode": "20814",
-						"state": "MD"
+						"postalCode": "11229",
+						"state": "NY"
 					}
 				},
 				{
@@ -518,19 +507,18 @@
 					"geometry": {
 						"type": "Point",
 						"coordinates": [
-							-77.359425054188,
-							38.958058116661
+							-73.945734,
+							40.655865
 						]
 					},
 					"properties": {
-						"phoneFormatted": "(571) 203-0082",
-						"phone": "5712030082",
-						"address": "11935 Democracy Dr",
-						"city": "Reston",
+						"phoneFormatted": "(718) 270-1000",
+						"phone": "7182701000",
+						"address": "SUNY Downstate Medical Center - 450 Clarkson Ave",
+						"city": "Brooklyn",
 						"country": "United States",
-						"crossStreet": "btw Explorer & Library",
-						"postalCode": "20190",
-						"state": "VA"
+						"postalCode": "11203",
+						"state": "NY"
 					}
 				},
 				{
@@ -538,19 +526,18 @@
 					"geometry": {
 						"type": "Point",
 						"coordinates": [
-							-77.10853099823,
-							38.880100922392
+							-73.816925,
+							40.757901
 						]
 					},
 					"properties": {
-						"phoneFormatted": "(703) 522-2016",
-						"phone": "7035222016",
-						"address": "4075 Wilson Blvd",
-						"city": "Arlington",
+						"phoneFormatted": "(718) 670-5000",
+						"phone": " 7186705000",
+						"address": "Flushing Hospital Medical Center - 4500 Parsons Blvd",
+						"city": "Flushing",
 						"country": "United States",
-						"crossStreet": "at N Randolph St.",
-						"postalCode": "22203",
-						"state": "VA"
+						"postalCode": "11355",
+						"state": "NY"
 					}
 				},
 				{
@@ -558,18 +545,18 @@
 					"geometry": {
 						"type": "Point",
 						"coordinates": [
-							-75.28784,
-							40.008008
+							-73.950094,
+							40.778741
 						]
 					},
 					"properties": {
-						"phoneFormatted": "(610) 642-9400",
-						"phone": "6106429400",
-						"address": "68 Coulter Ave",
-						"city": "Ardmore",
+						"phoneFormatted": "(212) 933-1364",
+						"phone": "2129331364",
+						"address": "CityMD East 86th Urgent Care - 336 East 86th St",
+						"city": "New York",
 						"country": "United States",
-						"postalCode": "19003",
-						"state": "PA"
+						"postalCode": "10028",
+						"state": "NY"
 					}
 				},
 				{
@@ -577,18 +564,18 @@
 					"geometry": {
 						"type": "Point",
 						"coordinates": [
-							-75.20121216774,
-							39.954030175164
+							-73.910194,
+							40.776175
 						]
 					},
 					"properties": {
-						"phoneFormatted": "(215) 386-1365",
-						"phone": "2153861365",
-						"address": "3925 Walnut St",
-						"city": "Philadelphia",
+						"phoneFormatted": "(718) 545-0128",
+						"phone": "7185450128",
+						"address": "CVS - 31 01 Ditmars Blvd",
+						"city": "Queens",
 						"country": "United States",
-						"postalCode": "19104",
-						"state": "PA"
+						"postalCode": "11105",
+						"state": "NY"
 					}
 				},
 				{
@@ -596,19 +583,18 @@
 					"geometry": {
 						"type": "Point",
 						"coordinates": [
-							-77.043959498405,
-							38.903883387232
+							-73.909016,
+							40.849608
 						]
 					},
 					"properties": {
-						"phoneFormatted": "(202) 331-3355",
-						"phone": "2023313355",
-						"address": "1901 L St. NW",
-						"city": "Washington DC",
+						"phoneFormatted": "(718) 583-3060",
+						"phone": "7185833060",
+						"address": "ECHO Free Clinic - 1894 Walton Ave",
+						"city": "The Bronx",
 						"country": "United States",
-						"crossStreet": "at 19th St",
-						"postalCode": "20036",
-						"state": "D.C."
+						"postalCode": "10453",
+						"state": "NY"
 					}
 				}
 			]
