--- a/prevention.html
+++ b/prevention.html
@@ -51,12 +51,12 @@
 	<div class="site">
 		<div class="about">
 			<h1 style="color: #fff">About Flu</h1>
-			<h2>What is Influenza (Flu)?</h2>
-			<p>
+			<h2 class="hpacccb">What is Influenza (Flu)?</h2>
+			<p class="hpaccc">
 			<img class="imgset1" src="assets/img/flu1.jpeg">
 			Flu is a contagious respiratory illness caused by influenza viruses that infect the nose, throat, and sometimes the lungs. It can cause mild to severe illness, and at times can lead to death. The best way to prevent flu is by getting a flu vaccine each year.</p>
 			<h2>When is the flu season in the United States? </h2>
-			<p>season occurs in the Fall and Winter. While influenza viruses circulate year-round, most of the time flu activity peaks between December and February, but activity can last as late as May. The overall health impact (e.g., infections, hospitalizations, and deaths) of a flu season varies from season to season. CDC collects, compiles, and analyzes information on influenza activity year-round in the United States and produces FluView, a weekly surveillance report, and FluView Interactive, which allows for more in-depth exploration of influenza surveillance data.  The Weekly U.S. Influenza Summary Update is updated each week from October through May.</p>
+			<p class="hpaccc">season occurs in the Fall and Winter. While influenza viruses circulate year-round, most of the time flu activity peaks between December and February, but activity can last as late as May. The overall health ...........</p>
 			<div class="astyle">
 				<a href="about.html">Learn More</a>
 			</div>
@@ -65,9 +65,9 @@
 
 		<div class="facts">
 			<h1 style="color: #008377">Facts</h1>
-			<h2>How Many People Get Sick with Flu Last Year?</h2>
-			<p>CDC estimates that the burden of illness during the 2018–2019 season included an estimated 35.5 million people getting sick with influenza, 16.5 million people going to a health care provider for their illness, 490,600 hospitalizations, and 34,200 deaths from influenza. The number of influenza-associated illnesses that occurred last season was similar to the estimated number of influenza-associated illnesses during the 2012–2013 influenza season when an estimated 34 million people had symptomatic influenza illness.</p>
-			<img class="imgset" src="assets/img/flu2.png">
+			<h2 class="hpacccb">How Many People Get Sick with Flu Last Year?</h2>
+			<p class="hpaccc">CDC estimates that the burden of illness during the 2018–2019 season included an estimated 35.5 million people getting sick with influenza, 16.5 million people going to a health care provider for their illness, 490,600 hospitalizations, and 34,200 deaths from influenza. The number of influenza-associated illnesses that occurred last season was similar to the estimated number of influenza-associated illnesses during the 2012–2013 influenza season when an estimated 34 million people had symptomatic influenza illness.</p>
+<!--			<img class="imgset" src="assets/img/flu2.png">-->
 			<div class="astyle2">
 				<a href="facts.html">Learn More</a>
 			</div>
@@ -76,9 +76,9 @@
 
 		<div class="flu">
 			<h1 style="color: #008377">Flu Vaccination</h1>
-			<h2>Why should people get vaccinated against the flu?</h2>
-			<p>Influenza is a potentially serious disease that can lead to hospitalization and sometimes even death. Every flu season is different, and influenza infection can affect people differently, but millions of people get flu every year, hundreds of thousands of people are hospitalized and thousands to tens of thousands of people die from flu-related causes every year. An annual seasonal flu vaccine is the best way to help protect against flu. Vaccination has been shown to have many benefits including reducing the risk of flu illnesses, hospitalizations and even the risk of flu-related death in children.</p>
-			<img class="imgset" src="assets/img/flu4.png">
+			<h2 class="hpacccb">Why should people get vaccinated against the flu?</h2>
+			<p class="hpaccc">Influenza is a potentially serious disease that can lead to hospitalization and sometimes even death. Every flu season is different, and influenza infection can affect people differently, but millions of people get flu every year, hundreds of thousands of people are hospitalized and thousands to tens of thousands of people die from flu-related causes every year. An annual seasonal flu vaccine is the best way to help protect against flu. Vaccination has been shown to have many benefits including reducing the risk of flu illnesses, hospitalizations and even the risk of flu-related death in children.</p>
+<!--			<img class="imgset" src="assets/img/flu4.png">-->
 			<div class="astyle3">
 				<a href="flu.html">Learn More</a>
 			</div>
@@ -87,9 +87,8 @@
 
 		<div class="prevent">
 			<h1 style="color: #fff">Prevents</h1>
-			<h2>How to prevent the flu?</h2>
-			<p>CDC urges you to take the following actions to pretect yourself.</p>
-			<div class="prenvent-flu"><ul>
+			<h2 class="hpacccb">How to prevent the flu?</h2>
+			<div class="prenvent-flu hpaccc"><ul>
 				<li>Get the flu shot</li>
 				<li>Wash your hand</li>
 				<li>Cover your mouth when sneezing</li>
@@ -101,42 +100,14 @@
 				<li>Get enough sleep</li>
 			</ul>
 		</div>
-			<img class="imgset" src="assets/img/flu3.jpg">
+			<img class="imgset" src="assets/img/flu3.jpg" style="width: 70%">
 		
 		<div class="astyle4">
 				<a href="infoprevent.html">Learn More</a>
 			</div>
 	</div>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 	</div>
-
-
-
 </div>
-
-
-
-
-
-
-
-
-
-
-
 
 
 
