--- a/location.html
+++ b/location.html
@@ -105,10 +105,10 @@
 		}
 
 		::-webkit-scrollbar {
-			width: 3px;
+			width: 5px;
 			height: 3px;
 			border-left: 0;
-			background: rgba(0, 0, 0, 0.1);
+			background: rgba(245, 251, 254, 0.1);
 		}
 
 		::-webkit-scrollbar-track {
@@ -117,7 +117,7 @@
 
 		::-webkit-scrollbar-thumb {
 			background: #008377;
-			border-radius: 0;
+			border-radius: 10px;
 		}
 
 		.marker {
