social media change

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 			background: url(assets/img/How-International-Students-Make-Friends-in-College-1024x636.jpg);
 			background-size: cover;
 			background-position: bottom right;
-			height:400px;
+			height: 400px;
 			width: 100%
 		}
 
@@ -36,83 +36,90 @@
 	<!--navigation-->
 	<header>
 		<div class="container">
-		<h1><a href="index.html" id="logo"><img src="assets/img/ffclogo.svg" class="logo"></a></h1>
-		<button id="mb"><i class="fa fa-bars"></i></button>
-		<nav id="mediasc500">
-			<ul>
-				<li>
-					<a href="index.html" style="background: #dfe675"><p class="titf">Home</p></a>
-				</li>
-				<li>
-					<a href="prevention.html"><p class="titf">Prevention</p></a>
-				</li>
-				<li>
-					<a href="location.html"><p class="titf">Location</p></a>
-				</li>
-			</ul>
-			<div class="search">
-			<form>
-			<lable>
-			<input class="sinput" type="text" placeholder="Search">
-			</lable>
-			<button class="sbutton" type="submit" value="Submit"><img src="assets/img/search.svg"class="simg">
-			</button>
-			</form>
-		</div>
-		</nav>
-		
+			<h1><a href="index.html" id="logo"><img src="assets/img/ffclogo.svg" class="logo"></a></h1>
+			<button id="mb"><i class="fa fa-bars"></i></button>
+			<nav id="mediasc500">
+				<ul>
+					<li>
+						<a href="index.html" style="background: #dfe675">
+							<p class="titf">Home</p>
+						</a>
+					</li>
+					<li>
+						<a href="prevention.html">
+							<p class="titf">Prevention</p>
+						</a>
+					</li>
+					<li>
+						<a href="location.html">
+							<p class="titf">Location</p>
+						</a>
+					</li>
+				</ul>
+				<div class="search">
+					<form>
+						<lable>
+							<input class="sinput" type="text" placeholder="Search">
+						</lable>
+						<button class="sbutton" type="submit" value="Submit"><img src="assets/img/search.svg" class="simg">
+						</button>
+					</form>
+				</div>
+			</nav>
+
 		</div>
 	</header>
 
-<!--hero-->
-<div class="fullcontainer" style="padding-top: 0px">
-	<div id="hero">
-		<div class="overlay">
-			<div class="p10 tc">
-				<p class="tcolor5">Get Your flu shot and live a healthy life</p>
-				<p class="tcolor5" style="font-size: 18px; margin-top: 0px">From Flu Shot Central</p>
+	<!--hero-->
+	<div class="fullcontainer" style="padding-top: 0px">
+		<div id="hero">
+			<div class="overlay">
+				<div class="p10 tc">
+					<p class="tcolor5">Get Your flu shot and live a healthy life</p>
+					<p class="tcolor5" style="font-size: 18px; margin-top: 0px">From Flu Shot Central</p>
+				</div>
 			</div>
 		</div>
 	</div>
-</div>
 
-<!--text-->
-<div class="container">
-	<div class="p50 hpaccc">
-		Are you a college student?<br>Did you get your flu shot this year? <br>Did you know that 37,000 people die each year in the US from the virus? 
+	<!--text-->
+	<div class="container">
+		<div class="p50 hpaccc">
+			Are you a college student?<br>Did you get your flu shot this year? <br>Did you know that 37,000 people die each year in the US from the virus?
+		</div>
 	</div>
-</div>
 
-<div class="container">
-	<div class="p50 hpaccc" style="padding-top: 0;">
-		While the elderly, young children and people with preexisting conditions are most at risk, you play an essential role in preventing unnecessary deaths by getting the flu shot yourself and preventing the spread of the disease to the most vulnerable! Only 50% of NYC college students get their flu shot. Let’s change this! Play your part - get the flu shot!
+	<div class="container">
+		<div class="p50 hpaccc" style="padding-top: 0;">
+			While the elderly, young children and people with preexisting conditions are most at risk, you play an essential role in preventing unnecessary deaths by getting the flu shot yourself and preventing the spread of the disease to the most vulnerable! Only 50% of NYC college students get their flu shot. Let’s change this! Play your part - get the flu shot!
+		</div>
 	</div>
-</div>
 
 
-<!--bandaid-->
-<div class="container">
-	<div class="hpacccb tc" style="padding-top: 0;">
-		Get our band-aid from a partnered location and post an image of you wearing it. Show the world you got your antibodies!
+	<!--bandaid-->
+	<div class="container">
+		<div class="hpacccb tc" style="padding-top: 0;">
+			Get our band-aid from a partnered location and post an image of you wearing it. Show the world you got your antibodies!
 
+		</div>
 	</div>
-</div>
-<div class="container p50ho">
-	<div class="hpacccb tc boxing c50 m10">
-		<div class="boxtitledg">Flu Shot Central Bandaid</div> <br><img src="assets/img/ffcbandaid2.png" alt="" style="padding: 10px 10px 5px 5px">
+	<div class="container p50ho">
+		<div class="hpacccb tc boxing c50 m10">
+			<div class="boxtitledg">Flu Shot Central Bandaid</div> <br><img src="assets/img/ffcbandaid2.png" alt="" style="padding: 10px 10px 5px 5px">
+		</div>
+		<div class="hpacccb tc boxingy c50 m10">
+			<div class="boxtitledg" style="background: #dfe675; color: #008377">I Got My Antibodies</div>
+			<img src="assets/img/smexample.png">
+		</div>
 	</div>
-	<div class="hpacccb tc boxingy c50 m10">
-		<div class="boxtitledg" style="background: #dfe675; color: #008377">I Got My Antibodies</div> <br><img src="assets/img/1v2.png" alt="" style="padding:  10px 5px 10px 5px"><br><img src="assets/img/4.png" alt="" style="padding:  10px 5px 10px 5px">
-	</div>
-</div>
 
 	<!--maybe copyrighted?-->
 	<footer>
-	<div class="container tc p5">
-		<div class="c33"><a href="aboutffc.html" class="p10">About FluShotCentral.com</a></div>
-		<div class="c33"><a href="aboutteamwow.html" class="p10">About Team Wow</a></div>
-		<div class="c33"><a href="https://www.cdc.gov/flu/index.htm" class="p10">CDC</a></div>
-	</div>
+		<div class="container tc p5">
+			<div class="c33"><a href="aboutffc.html" class="p10">About FluShotCentral.com</a></div>
+			<div class="c33"><a href="aboutteamwow.html" class="p10">About Team Wow</a></div>
+			<div class="c33"><a href="https://www.cdc.gov/flu/index.htm" class="p10">CDC</a></div>
+		</div>
 		<p class="tc a1 p10">&copy; 2020 Flu Shot Central by Team Wow.</p>
 	</footer>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
@@ -126,7 +133,10 @@
 				$('nav').show();
 			}
 		});
+
 	</script>
-	
-<!--By Leping Jiang-->
-</body></html>
+
+	<!--By Leping Jiang-->
+</body>
+
+</html>
