--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 		</div>
 		<div class="hpacccb tc boxingy c50 m10">
 			<div class="boxtitledg" style="background: #dfe675; color: #008377">I Got My Antibodies</div>
-			<img src="assets/img/smexample.png">
+			<img src="assets/img/smptexplus.png">
 		</div>
 	</div>
 
