credited and img change

--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 	<link href="https://fonts.googleapis.com/css?family=Lato:300,400,700&display=swap" rel="stylesheet">
 	<style>
 		#hero {
-			background: url(assets/img/How-International-Students-Make-Friends-in-College-1024x636.jpg);
+			background: url(assets/img/zachary-nelson-98Elr-LIvD8-unsplash%20edited.jpg);
 			background-size: cover;
-			background-position: bottom right;
+			background-position: center center;
 			height: 400px;
 			width: 100%
 		}
@@ -120,7 +120,8 @@
 			<div class="c33"><a href="aboutteamwow.html" class="p10">About Team Wow</a></div>
 			<div class="c33"><a href="https://www.cdc.gov/flu/index.htm" class="p10">CDC</a></div>
 		</div>
-		<p class="tc a1 p10">&copy; 2020 Flu Shot Central by Team Wow.</p>
+		<p class="tc a1" style="border-bottom: 1px dotted #9AD3CC">umps by Zachary Nelson at Unsplash</p>
+		<p class="tc a1">&copy; 2020 Flu Shot Central by Team Wow.</p>
 	</footer>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 	<script>
