--- a/aboutteamwow.html
+++ b/aboutteamwow.html
@@ -132,10 +132,10 @@
 	<footer>
 	<div class="container tc p5">
 		<div class="c33"><a href="aboutffc.html" class="p10">About FluShotCentral.com</a></div>
-		<div class="c33"><a href="aboutteamwow.html" class="p10" style="background: #dfe675">About Team Wow</a></div>
+		<div class="c33"><a href="aboutteamwow.html" class="p10" style="background: #dfe675; border-radius: 10px">About Team Wow</a></div>
 		<div class="c33"><a href="https://www.cdc.gov/flu/index.htm" class="p10">CDC</a></div>
 	</div>
-		<p class="tc a1 p5">&copy; 2020 Flu Shot Central by Team Wow.</p>
+		<p class="tc a1">&copy; 2020 Flu Shot Central by Team Wow.</p>
 	</footer>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 	<script>
