--- a/location.html
+++ b/location.html
@@ -311,7 +311,8 @@
 		<div class="c33"><a href="aboutteamwow.html" class="p10">About Team Wow</a></div>
 		<div class="c33"><a href="https://www.cdc.gov/flu/index.htm" class="p10">CDC</a></div>
 	</div>
-		<p class="tc a1 p5">&copy; 2020 Flu Shot Central by Team Wow.</p>
+	<p class="tc a1" style="border-bottom: 1px dotted #9AD3CC">652145240 by Mary Mathis/NPR</p>
+		<p class="tc a1">&copy; 2020 Flu Shot Central by Team Wow.</p>
 	</footer> 
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 	<script>
