--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
 			<div class="c33"><a href="aboutteamwow.html" class="p10">About Team Wow</a></div>
 			<div class="c33"><a href="https://www.cdc.gov/flu/index.htm" class="p10">CDC</a></div>
 		</div>
-		<p class="tc a1" style="border-bottom: 1px dotted #9AD3CC">umps by Zachary Nelson at Unsplash</p>
+		<p class="tc a1" style="border-bottom: 1px dotted #9AD3CC">Jumps by Zachary Nelson at Unsplash</p>
 		<p class="tc a1">&copy; 2020 Flu Shot Central by Team Wow.</p>
 	</footer>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
