--- a/prevention.html
+++ b/prevention.html
@@ -50,7 +50,7 @@
 
 	<div class="site">
 		<div class="about">
-			<h1 style="color: #fff">About Flu</h1>
+			<h1 style="color: #fff">About the Flu</h1>
 			<h2 class="hpacccb">What is Influenza (Flu)?</h2>
 			<p class="hpaccc">
 			<img class="imgset1" src="assets/img/flu1.jpeg">
@@ -65,7 +65,7 @@
 
 		<div class="facts">
 			<h1 style="color: #008377">Facts</h1>
-			<h2 class="hpacccb">How Many People Get Sick with Flu Last Year?</h2>
+			<h2 class="hpacccb">How Many People Get Sick with the Flu Last Year?</h2>
 			<p class="hpaccc">CDC estimates that the burden of illness during the 2018–2019 season included an estimated 35.5 million people getting sick with influenza, 16.5 million people going to a health care provider for their illness, 490,600 hospitalizations, and 34,200 deaths from influenza. The number of influenza-associated illnesses that occurred last season was similar to the estimated number of influenza-associated illnesses during the 2012–2013 influenza season when an estimated 34 million people had symptomatic influenza illness.</p>
 <!--			<img class="imgset" src="assets/img/flu2.png">-->
 			<div class="astyle2">
@@ -86,11 +86,11 @@
 
 
 		<div class="prevent">
-			<h1 style="color: #fff">Prevents</h1>
+			<h1 style="color: #fff">Prevent</h1>
 			<h2 class="hpacccb">How to prevent the flu?</h2>
 			<div class="prenvent-flu hpaccc"><ul>
 				<li>Get the flu shot</li>
-				<li>Wash your hand</li>
+				<li>Wash your hands</li>
 				<li>Cover your mouth when sneezing</li>
 				<li>Keep items you touch frequently clean</li>
 				<li>Get Vitamin D</li>
