--- a/prevention.html
+++ b/prevention.html
@@ -9,6 +9,15 @@
 	<link rel="stylesheet" href="assets/css/layout.css">
 	<link href="https://fonts.googleapis.com/css?family=Lato:300,400,700&display=swap" rel="stylesheet">
 	<style>
+		@media screen and (max-width:650px) {
+	.mbbb20{
+		margin-bottom: 20px;
+	}
+}
+		
+.mmlr10{
+	margin: 0px 10px
+}
 
 	</style>
 </head>
@@ -51,12 +60,12 @@
 	<div class="site">
 		<div class="about">
 			<h1 style="color: #fff">About the Flu</h1>
-			<h2 class="hpacccb">What is Influenza (Flu)?</h2>
-			<p class="hpaccc">
+			<h2 class="hpacccb mmlr10">What is Influenza (Flu)?</h2>
+			<p class="hpaccc mmlr10">
 			<img class="imgset1" src="assets/img/flu1.jpeg">
 			Flu is a contagious respiratory illness caused by influenza viruses that infect the nose, throat, and sometimes the lungs. It can cause mild to severe illness, and at times can lead to death. The best way to prevent flu is by getting a flu vaccine each year.</p>
-			<h2>When is the flu season in the United States? </h2>
-			<p class="hpaccc">season occurs in the Fall and Winter. While influenza viruses circulate year-round, most of the time flu activity peaks between December and February, but activity can last as late as May. The overall health ...........</p>
+			<h2 class="mmlr10">When is the flu season in the United States? </h2>
+			<p class="hpaccc mmlr10">season occurs in the Fall and Winter. While influenza viruses circulate year-round, most of the time flu activity peaks between December and February, but activity can last as late as May. The overall health ...........</p>
 			<div class="astyle">
 				<a href="about.html">Learn More</a>
 			</div>
@@ -65,8 +74,8 @@
 
 		<div class="facts">
 			<h1 style="color: #008377">Facts</h1>
-			<h2 class="hpacccb">How Many People Get Sick with the Flu Last Year?</h2>
-			<p class="hpaccc">CDC estimates that the burden of illness during the 2018–2019 season included an estimated 35.5 million people getting sick with influenza, 16.5 million people going to a health care provider for their illness, 490,600 hospitalizations, and 34,200 deaths from influenza. The number of influenza-associated illnesses that occurred last season was similar to the estimated number of influenza-associated illnesses during the 2012–2013 influenza season when an estimated 34 million people had symptomatic influenza illness.</p>
+			<h2 class="hpacccb mmlr10">How Many People Get Sick with the Flu Last Year?</h2>
+			<p class="hpaccc mmlr10">CDC estimates that the burden of illness during the 2018–2019 season included an estimated 35.5 million people getting sick with influenza, 16.5 million people going to a health care provider for their illness, 490,600 hospitalizations, and 34,200 deaths from influenza. The number of influenza-associated illnesses that occurred last season was similar to the estimated number of influenza-associated illnesses during the 2012–2013 influenza season when an estimated 34 million people had symptomatic influenza illness.</p>
 <!--			<img class="imgset" src="assets/img/flu2.png">-->
 			<div class="astyle2">
 				<a href="facts.html">Learn More</a>
@@ -76,8 +85,8 @@
 
 		<div class="flu">
 			<h1 style="color: #008377">Flu Vaccination</h1>
-			<h2 class="hpacccb">Why should people get vaccinated against the flu?</h2>
-			<p class="hpaccc">Influenza is a potentially serious disease that can lead to hospitalization and sometimes even death. Every flu season is different, and influenza infection can affect people differently, but millions of people get flu every year, hundreds of thousands of people are hospitalized and thousands to tens of thousands of people die from flu-related causes every year. An annual seasonal flu vaccine is the best way to help protect against flu. Vaccination has been shown to have many benefits including reducing the risk of flu illnesses, hospitalizations and even the risk of flu-related death in children.</p>
+			<h2 class="hpacccb mmlr10">Why should people get vaccinated against the flu?</h2>
+			<p class="hpaccc mmlr10">Influenza is a potentially serious disease that can lead to hospitalization and sometimes even death. Every flu season is different, and influenza infection can affect people differently, but millions of people get flu every year, hundreds of thousands of people are hospitalized and thousands to tens of thousands of people die from flu-related causes every year. An annual seasonal flu vaccine is the best way to help protect against flu. Vaccination has been shown to have many benefits including reducing the risk of flu illnesses, hospitalizations and even the risk of flu-related death in children.</p>
 <!--			<img class="imgset" src="assets/img/flu4.png">-->
 			<div class="astyle3">
 				<a href="flu.html">Learn More</a>
@@ -85,10 +94,10 @@
 		</div>
 
 
-		<div class="prevent">
+		<div class="prevent mbbb20">
 			<h1 style="color: #fff">Prevent</h1>
-			<h2 class="hpacccb">How to prevent the flu?</h2>
-			<div class="prenvent-flu hpaccc"><ul>
+			<h2 class="hpacccb mmlr10">How to prevent the flu?</h2>
+			<div class="prenvent-flu hpaccc mmlr10"><ul>
 				<li>Get the flu shot</li>
 				<li>Wash your hands</li>
 				<li>Cover your mouth when sneezing</li>
