--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 		<div class="hpacccb tc boxing c50 m10">
 			<div class="boxtitledg">Flu Shot Central Bandaid</div>
 			<div class="hpaccc tc m10" style="padding-top: 0;">
-			Get our band-aid from a partnered location and post an image of you wearing it. Show the world you got your antibodies!</div><img src="assets/img/ffcbandaid2.png" alt="" style="padding: 10px 10px 5px 5px">
+			Get our band-aid from a partnered location and post an image of you wearing it. Show the world you got your antibodies!</div><img src="assets/img/bandaidv3web@2x-100.jpg" alt="" style="padding: 10px 10px 5px 5px">
 		</div>
 		<div class="hpacccb tc boxingy c50 m10">
 			<div class="boxtitledg" style="background: #dfe675; color: #008377">I Got My Antibodies</div>
