--- a/prevention.html
+++ b/prevention.html
@@ -63,7 +63,7 @@
 			<h2 class="hpacccb mmlr10">What is Influenza (Flu)?</h2>
 			<p class="hpaccc mmlr10">
 			<img class="imgset1" src="assets/img/flu1.jpeg">
-			Flu is a contagious respiratory illness caused by influenza viruses that infect the nose, throat, and sometimes the lungs. It can cause mild to severe illness, and at times can lead to death. The best way to prevent flu is by getting a flu vaccine each year.</p>
+			The flu is a contagious respiratory illness caused by influenza viruses that infect the nose, throat, and sometimes the lungs. It can cause mild to severe illness, and at times can lead to death. The best way to prevent flu is by getting a flu vaccine each year.</p>
 			<h2 class="mmlr10">When is the flu season in the United States? </h2>
 			<p class="hpaccc mmlr10">season occurs in the Fall and Winter. While influenza viruses circulate year-round, most of the time flu activity peaks between December and February, but activity can last as late as May. The overall health ...........</p>
 			<div class="astyle">
@@ -74,8 +74,8 @@
 
 		<div class="facts">
 			<h1 style="color: #008377">Facts</h1>
-			<h2 class="hpacccb mmlr10">How Many People Get Sick with the Flu Last Year?</h2>
-			<p class="hpaccc mmlr10">CDC estimates that the burden of illness during the 2018–2019 season included an estimated 35.5 million people getting sick with influenza, 16.5 million people going to a health care provider for their illness, 490,600 hospitalizations, and 34,200 deaths from influenza. The number of influenza-associated illnesses that occurred last season was similar to the estimated number of influenza-associated illnesses during the 2012–2013 influenza season when an estimated 34 million people had symptomatic influenza illness.</p>
+			<h2 class="hpacccb mmlr10">How Many People Got Sick with the Flu Last Year?</h2>
+			<p class="hpaccc mmlr10">CDC estimates that in the united states the burden of illness during the 2018–2019 season included an estimated 35.5 million people getting sick with influenza, 16.5 million people going to a health care provider for their illness, 490,600 hospitalizations, and 34,200 deaths from influenza. The number of influenza-associated illnesses that occurred last season was similar to the estimated number of influenza-associated illnesses during the 2012–2013 influenza season when an estimated 34 million people had symptomatic influenza illness.</p>
 <!--			<img class="imgset" src="assets/img/flu2.png">-->
 			<div class="astyle2">
 				<a href="facts.html">Learn More</a>
