--- a/about.html
+++ b/about.html
@@ -59,7 +59,7 @@
 				<h2 class="hpacccb">What is Influenza (Flu)?</h2>
 				<p class="hpaccc">
 				<img class="imgset1" src="assets/img/flu1.jpeg">
-				Flu is a contagious respiratory illness caused by influenza viruses that infect the nose, throat, and sometimes the lungs. It can cause mild to severe illness, and at times can lead to death. The best way to prevent flu is by getting a flu vaccine each year.</p>
+				The flu is a contagious respiratory illness caused by influenza viruses that infect the nose, throat, and sometimes the lungs. It can cause mild to severe illness, and at times can lead to death. The best way to prevent flu is by getting a flu vaccine each year.</p>
 			</div>
 			
 			<div class="h2-2">
