--- a/flu.html
+++ b/flu.html
@@ -63,7 +63,7 @@
 			
 			<div class="h2-2">
 				<h2 class="hpacccb">How do flu vaccines work?</h2>
-				<p class="hpaccc">Flu vaccines cause antibodies to develop in the body about two weeks after vaccination. These antibodies provide protection against infection with the viruses that are used to make the vaccine.</p>
+				<p class="hpaccc">The flu vaccines cause antibodies to develop in the body about two weeks after vaccination. These antibodies provide protection against infection with the viruses that are used to make the vaccine.</p>
 				<img class="imgset1" src="assets/img/flu4.png">
 				<p class="hpaccc">The seasonal flu vaccine protects against the influenza viruses that research indicates will be most common during the upcoming season. Most flu vaccines in the United States protect against four different flu viruses (“quadrivalent”); an influenza A (H1N1) virus, an influenza A (H3N2) virus, and two influenza B viruses. There are also some flu vaccines that protect against three different flu viruses (“trivalent”); an influenza A (H1N1) virus, an influenza A (H3N2) virus, and one influenza B virus. Two of the trivalent vaccines are designed specifically for people 65 and older to create a stronger immune response.</p>
 			</div>
