--- a/prevention.html
+++ b/prevention.html
@@ -75,7 +75,7 @@
 		<div class="facts">
 			<h1 style="color: #008377">Facts</h1>
 			<h2 class="hpacccb mmlr10">How Many People Got Sick with the Flu Last Year?</h2>
-			<p class="hpaccc mmlr10">CDC estimates that in the united states the burden of illness during the 2018–2019 season included an estimated 35.5 million people getting sick with influenza, 16.5 million people going to a health care provider for their illness, 490,600 hospitalizations, and 34,200 deaths from influenza. The number of influenza-associated illnesses that occurred last season was similar to the estimated number of influenza-associated illnesses during the 2012–2013 influenza season when an estimated 34 million people had symptomatic influenza illness.</p>
+			<p class="hpaccc mmlr10">The CDC estimates that in the united states the burden of illness during the 2018–2019 season included an estimated 35.5 million people getting sick with influenza, 16.5 million people going to a health care provider for their illness, 490,600 hospitalizations, and 34,200 deaths from influenza. The number of influenza-associated illnesses that occurred last season was similar to the estimated number of influenza-associated illnesses during the 2012–2013 influenza season when an estimated 34 million people had symptomatic influenza illness.</p>
 <!--			<img class="imgset" src="assets/img/flu2.png">-->
 			<div class="astyle2">
 				<a href="facts.html">Learn More</a>
