style update and typo fixed

--- a/flu.html
+++ b/flu.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-	<title>Flu Shot Central</title>
+	<title>Flu Shot Central-Prevention-Flu Vaccination</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 	<link rel="stylesheet" href="assets/css/style.css">
@@ -48,6 +48,12 @@
 		
 		</div>
 	</header>
+	
+	
+	<!--Back Button-->
+	<div class="dropdown">
+		<button class="dropbtn"><a href="prevention.html"><img src="assets/img/backbtm.svg" alt=""></a></button>
+	</div>
 	
 	<div class="container p10">
 
