--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 		</div>
 		<div class="hpacccb tc boxingy c50 m10">
 			<div class="boxtitledg" style="background: #dfe675; color: #008377">I Got My Antibodies</div>
-			<div class="hpaccc tc m10" style="padding-top: 0;">flushotcentral I got my flu shot. It’s to get yours. Show your medal here and tell us you got your shot by using the hashtag #FluShotCentral </div>
+			<div class="hpaccc tc m10" style="padding-top: 0;">Did you get your flu shot? Show your bandaid and convince others to do the same by sharing your photo with the hashtag #FluShotCentral</div>
 			<img src="assets/img/fulligmuckup.jpg">
 		</div>
 	</div>
