--- a/index.html
+++ b/index.html
@@ -100,12 +100,12 @@
 		<div class="container">
 		<div class="hpacccb tc boxing c50 m10">
 			<div class="boxtitledg">Flu Shot Central Bandaid</div>
-			<div class="hpaccc tc m10" style="padding-top: 0;">
+			<div class="hpaccc tc m10 " style="padding-top: 0;">
 			Get our band-aid from a partnered location and post an image of you wearing it. Show the world you got your antibodies!</div><img src="assets/img/bandaidv3web@2x-100.jpg" alt="" style="padding: 10px 10px 5px 5px">
 		</div>
 		<div class="hpacccb tc boxingy c50 m10">
 			<div class="boxtitledg" style="background: #dfe675; color: #008377">I Got My Antibodies</div>
-			<div class="hpaccc tc m10" style="padding-top: 0;">Did you get your flu shot? Show your bandaid and convince others to do the same by sharing your photo with the hashtag #FluShotCentral</div>
+			<div class="hpaccc tc m10 tm10" style="padding-top: 0;">Did you get your flu shot? Show your bandaid and convince others to do the same by sharing your photo with the hashtag #FluShotCentral</div>
 			<img src="assets/img/fulligmuckup.jpg">
 		</div>
 	</div>
